<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>platform_driver_ethercat_lib</name>
  <version>0.0.0</version>
  <description>Elmo Gold Twitter and ATI FTS communication over EtherCAT</description>
  <maintainer email="tim.wiese@esa.int">Tim Wiese</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>soem</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>soem</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
